--- a/.github/workflows/gitflow-protect.yaml
+++ b/.github/workflows/gitflow-protect.yaml
@@ -1,110 +1,128 @@
-name: Reusable GitFlow Branch Protection
+name: GitFlow Branch Protection Setup
 
 on:
-  workflow_call:
-    secrets:
-      GH_PAT:
-        required: true
+  workflow_dispatch:
 
 jobs:
-  apply-branch-protection-rulesets:
+  protect-branches:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GH_PAT }}
+      GH_REPO: ${{ github.repository }}
+
     steps:
-      - name: Protect 'main' branch
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
-          GH_REPO: ${{ github.repository }}
+      - name: Set up dependencies
         run: |
-          gh api --method PUT "/repos/$GH_REPO/rulesets/1" \
-            -f name="Main Branch Protection" \
-            -f target="branch" \
-            -f enforcement="active" \
-            --input - << EOF
-            {
-              "conditions": {
-                "ref_name": {
-                  "include": ["refs/heads/main"],
-                  "exclude": []
-                }
-              },
-              "rules": [
-                {
-                  "type": "pull_request",
-                  "parameters": {
-                    "dismiss_stale_reviews_on_push": true,
-                    "require_code_owner_review": true,
-                    "require_last_push_approval": false,
-                    "required_approving_review_count": 2,
-                    "required_review_thread_resolution": true
-                  }
-                },
-                { "type": "non_fast_forward" }
-              ]
-            }
-          EOF
+          sudo apt-get update
+          sudo apt-get install -y jq
 
-      - name: Protect 'develop' branch
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
-          GH_REPO: ${{ github.repository }}
+      - name: Create or update 'Main' ruleset
         run: |
-          gh api --method PUT "/repos/$GH_REPO/rulesets/2" \
-            -f name="Develop Branch Protection" \
-            -f target="branch" \
-            -f enforcement="active" \
-            --input - << EOF
-            {
-              "conditions": {
-                "ref_name": {
-                  "include": ["refs/heads/develop"],
-                  "exclude": []
+          RULE_NAME="Main Branch Protection"
+          PAYLOAD='{
+            "name": "'"$RULE_NAME"'",
+            "target": "branch",
+            "enforcement": "active",
+            "conditions": {
+              "ref_name": {
+                "include": ["refs/heads/main"],
+                "exclude": []
+              }
+            },
+            "rules": [
+              {
+                "type": "pull_request",
+                "parameters": {
+                  "dismiss_stale_reviews_on_push": true,
+                  "require_code_owner_review": true,
+                  "require_last_push_approval": false,
+                  "required_approving_review_count": 2,
+                  "required_review_thread_resolution": true
                 }
               },
-              "rules": [
-                {
-                  "type": "pull_request",
-                  "parameters": {
-                    "dismiss_stale_reviews_on_push": true,
-                    "require_code_owner_review": false,
-                    "require_last_push_approval": false,
-                    "required_approving_review_count": 1,
-                    "required_review_thread_resolution": false
-                  }
-                },
-                { "type": "non_fast_forward" }
-              ]
-            }
-          EOF
+              { "type": "non_fast_forward" }
+            ]
+          }'
 
-      - name: Protect 'release/*' and 'hotfix/*' branches
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
-          GH_REPO: ${{ github.repository }}
+          RULE_ID=$(gh api repos/$GH_REPO/rulesets | jq -r ".[] | select(.name==\"$RULE_NAME\") | .id")
+          if [ -n "$RULE_ID" ]; then
+            echo "Updating $RULE_NAME (ID: $RULE_ID)"
+            echo "$PAYLOAD" | gh api --method PUT "/repos/$GH_REPO/rulesets/$RULE_ID" --input -
+          else
+            echo "Creating $RULE_NAME"
+            echo "$PAYLOAD" | gh api --method POST "/repos/$GH_REPO/rulesets" --input -
+          fi
+
+      - name: Create or update 'Develop' ruleset
         run: |
-          gh api --method PUT "/repos/$GH_REPO/rulesets/3" \
-            -f name="Release and Hotfix Branch Protection" \
-            -f target="branch" \
-            -f enforcement="active" \
-            --input - << EOF
-            {
-              "conditions": {
-                "ref_name": {
-                  "include": ["refs/heads/release/*", "refs/heads/hotfix/*"],
-                  "exclude": []
+          RULE_NAME="Develop Branch Protection"
+          PAYLOAD='{
+            "name": "'"$RULE_NAME"'",
+            "target": "branch",
+            "enforcement": "active",
+            "conditions": {
+              "ref_name": {
+                "include": ["refs/heads/develop"],
+                "exclude": []
+              }
+            },
+            "rules": [
+              {
+                "type": "pull_request",
+                "parameters": {
+                  "dismiss_stale_reviews_on_push": true,
+                  "require_code_owner_review": false,
+                  "require_last_push_approval": false,
+                  "required_approving_review_count": 1,
+                  "required_review_thread_resolution": false
                 }
               },
-              "rules": [
-                {
-                  "type": "pull_request",
-                  "parameters": {
-                    "dismiss_stale_reviews_on_push": true,
-                    "require_code_owner_review": false,
-                    "require_last_push_approval": false,
-                    "required_approving_review_count": 1,
-                    "required_review_thread_resolution": false
-                  }
-                },
-                { "type": "non_fast_forward" }
-              ]
-            }
-          EOF
+              { "type": "non_fast_forward" }
+            ]
+          }'
+
+          RULE_ID=$(gh api repos/$GH_REPO/rulesets | jq -r ".[] | select(.name==\"$RULE_NAME\") | .id")
+          if [ -n "$RULE_ID" ]; then
+            echo "Updating $RULE_NAME (ID: $RULE_ID)"
+            echo "$PAYLOAD" | gh api --method PUT "/repos/$GH_REPO/rulesets/$RULE_ID" --input -
+          else
+            echo "Creating $RULE_NAME"
+            echo "$PAYLOAD" | gh api --method POST "/repos/$GH_REPO/rulesets" --input -
+          fi
+
+      - name: Create or update 'Release/Hotfix' ruleset
+        run: |
+          RULE_NAME="Release and Hotfix Branch Protection"
+          PAYLOAD='{
+            "name": "'"$RULE_NAME"'",
+            "target": "branch",
+            "enforcement": "active",
+            "conditions": {
+              "ref_name": {
+                "include": ["refs/heads/release/*", "refs/heads/hotfix/*"],
+                "exclude": []
+              }
+            },
+            "rules": [
+              {
+                "type": "pull_request",
+                "parameters": {
+                  "dismiss_stale_reviews_on_push": true,
+                  "require_code_owner_review": false,
+                  "require_last_push_approval": false,
+                  "required_approving_review_count": 1,
+                  "required_review_thread_resolution": false
+                }
+              },
+              { "type": "non_fast_forward" }
+            ]
+          }'
+
+          RULE_ID=$(gh api repos/$GH_REPO/rulesets | jq -r ".[] | select(.name==\"$RULE_NAME\") | .id")
+          if [ -n "$RULE_ID" ]; then
+            echo "Updating $RULE_NAME (ID: $RULE_ID)"
+            echo "$PAYLOAD" | gh api --method PUT "/repos/$GH_REPO/rulesets/$RULE_ID" --input -
+          else
+            echo "Creating $RULE_NAME"
+            echo "$PAYLOAD" | gh api --method POST "/repos/$GH_REPO/rulesets" --input -
+          fi
