--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -143,7 +143,7 @@ extra:
     deprecated: Deprecated
 
 nav:
-  - Home: index.md
+  - Home: index.md # NEVER NAME THIS ANYTHING ELSE
   - Disclaimer: disclaimer.md
   - Quick Start:
       - Prerequisites: 0-quickstart/0-prerequisites.md
