--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,8 +1,8 @@
-# ─── EXAMPLE SHOWING ALL TASK FEATURES ─────────────────────────────────────────────────────────────────────
+# ─── Example Showing All Task Features ────────────────────────────────────────────────
 # setup:
 #   desc: "⚙️ Setup environment: install dependencies, generate config"
-# deps:
-# - init:dev
+#   deps:
+#     - init:dev
 #   prompt:
 #     - "This will install tools and dependencies. Continue? (y/N)"
 #   preconditions:
@@ -14,18 +14,21 @@
 #   env:
 #     SETUP_MODE: "auto"
 #   vars:
-#     # Override global PROJECT_NAME example
 #     PROJECT_NAME: "{{.PROJECT_NAME}}"
 
-# ─── Initialized Tasks ─────────────────────────────────
+
+
+# ─── Initialized Tasks ────────────────────────────────────────────────────────────────
 # init:dev:
 #   desc: "Initialize local/dev environment specifics"
 #   internal: true
 #   cmds:
 #     - echo "Running init:dev task for ENV={{.ENV}}"
-#   platforms: [linux, darwin]  # Only run on macOS/Linux
+#   platforms: [linux, darwin]
 
-# ─── Example Task with Inputs & Status Checks and directory ────────────────────────────────
+
+
+# ─── Example Task with Inputs, Status Checks and Directory ────────────────────────────
 # run-task:
 #   desc: "Run a task with an input parameter"
 #   dir: terraform/environments/dev
@@ -37,60 +40,73 @@
 #   status:
 #     - 'test -f output/{{.task_name}}.done'
 
-# ──────────────────────────────────────────────────────────────────────────────
-version: "3"
 
 # ─── Global Configuration ───────────────────────────────────────────────────────
-# Specify output style: options: [prefixed, unified]
+version: "3"
 output: prefixed
-
-# Support .env files for environment variables
 dotenv:
   - .env
   - .env.local
 
-# Global environment variables (can be overridden per task)
 env:
   ENV: '{{.ENV | default "dev"}}'
   DEBUG: '{{.DEBUG | default "false"}}'
 
-# Global variables (static or dynamic via shell)
 vars:
   PROJECT_NAME: '{{.PROJECT_NAME | default "my-project"}}'
   TIMESTAMP:
     sh: date '+%Y%m%d%H%M%S'
 
 includes:
-  # Example include of shared tasks
   common:
     taskfile: ./Taskfile.gitflow.yaml
     flatten: true
 
-# # # # # # # --------- # # # # # # # --------- # # # # # #
-# --------------------- Common Tasks ---------------------
-# # # # # # # --------- # # # # # # # --------- # # # # # #
+
+
+# ─── Core Tasks ────────────────────────────────────────────────────────────────
 tasks:
   default:
     desc: "📋 List all tasks"
     cmds:
       - task --list-all
 
-  # ─── Setup Task ──────────────────────────────────────────────────────────────
   setup:
     desc: "⚙️ Setup environment: install dependencies, generate config etc."
 
-  # ─── Development Task ────────────────────────────────────────────────────────
+
+
+# ─── Environment Management ────────────────────────────────────────────────────
   dev:
     desc: "🏗️ Provision and start local development environment"
     cmds:
       - pnpm run build
       - pnpm run start
-     
-  # ─── Production Task ─────────────────────────────────────────────────────────
+
   prod:
     desc: "🚀 Provision and deploy to production"
 
-  # ─── Cleanup Tasks ───────────────────────────────────────────────────────────
+
+
+# ─── Misc ────────────────────────────────────────────────────
+  info:
+    desc: "🌐 URLs to visit"
+    cmds:
+      - echo "Prometheus -> {{.PROM_URL}}"
+      - echo "Grafana -> {{.GRAF_URL}}"
+      - echo "App -> {{.APP_URL}}"
+
+  status:
+    desc: "Check if everything is running"
+
+  versions:
+    desc: "List current deployed versions"
+    cmds:
+      - mike list
+
+
+
+# ─── Cleanup Tasks ─────────────────────────────────────────────────────────────
   cleanup-dev:
     desc: "🔁 Cleanup development resources only"
 
@@ -100,25 +116,25 @@ tasks:
   cleanup-all:
     desc: "🧼 Cleanup dev and prod in one swoop"
 
-  # # # # # # # ---------- # # # # # # # ---------- # # # # # # #
-  # System Management
-  # # # # # # # ---------- # # # # # # # ---------- # # # # # # #
+
+
+# ─── System Management ─────────────────────────────────────────────────────────
   ports:
     desc: "📋 List ports in use"
     cmds:
       - ss -tunl
 
-  # # # # # # # ---------- # # # # # # # ---------- # # # # # # #
-  # Docs
-  # # # # # # # ---------- # # # # # # # ---------- # # # # # # #
+
+
+# ─── Documentation ─────────────────────────────────────────────────────────────
   docs:
     desc: "🌐 Serve docs locally -> http://127.0.0.1:8000/docs/"
     cmds:
       - poetry run mkdocs serve --clean
 
-  # # # # # # # ---------- # # # # # # # ---------- # # # # # # #
-  # FFMPEG Compression
-  # # # # # # # ---------- # # # # # # # ---------- # # # # # # #
+
+
+# ─── Assets and Compression ────────────────────────────────────────────────────
   mkdir-assets:
     desc: Create the assets/ directory if it doesn't exist
     cmds:
@@ -135,7 +151,6 @@ tasks:
     requires:
       vars: [video]
     vars:
-      # Optional overrides at runtime: task compress video=... crf=30 preset=fast
       crf: "{{.crf | default 28}}"
       preset: '{{.preset | default "veryfast"}}'
     cmds:
@@ -161,12 +176,10 @@ tasks:
       fps: "{{.fps | default 8}}"
       colors: "{{.colors | default 64}}"
     cmds:
-      # Step 1: Generate optimized palette
       - >
         ffmpeg -y -i "{{.gif}}"
         -vf "fps={{.fps}},scale=iw:-1:flags=lanczos,palettegen=max_colors={{.colors}}"
         assets/palette.png
-      # Step 2: Apply palette
       - >
         ffmpeg -y -i "{{.gif}}" -i assets/palette.png
         -lavfi "fps={{.fps}},scale=iw:-1:flags=lanczos[x];[x][1:v]paletteuse=dither=bayer:bayer_scale=5"
