--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,7 +17,6 @@
 #     PROJECT_NAME: "{{.PROJECT_NAME}}"
 
 
-
 # ─── Initialized Tasks ────────────────────────────────────────────────────────────────
 # init:dev:
 #   desc: "Initialize local/dev environment specifics"
@@ -25,7 +24,6 @@
 #   cmds:
 #     - echo "Running init:dev task for ENV={{.ENV}}"
 #   platforms: [linux, darwin]
-
 
 
 # ─── Example Task with Inputs, Status Checks and Directory ────────────────────────────
@@ -39,7 +37,6 @@
 #     - echo "Running {{.task_name}}"
 #   status:
 #     - 'test -f output/{{.task_name}}.done'
-
 
 # ─── Global Configuration ───────────────────────────────────────────────────────
 version: "3"
@@ -56,6 +53,8 @@ vars:
   PROJECT_NAME: '{{.PROJECT_NAME | default "my-project"}}'
   TIMESTAMP:
     sh: date '+%Y%m%d%H%M%S'
+  DOCS_COMPOSE_FILE: docker-compose.mkdocs.yml
+  MKDOCS_PORT: 0.0.0.0:8030
 
 includes:
   common:
@@ -63,34 +62,28 @@ includes:
     flatten: true
 
 
-
 # ─── Core Tasks ────────────────────────────────────────────────────────────────
 tasks:
   default:
-    desc: "📋 List all tasks"
+    desc: "List all tasks"
     cmds:
       - task --list-all
 
   setup:
-    desc: "⚙️ Setup environment: install dependencies, generate config etc."
-
+    desc: "Setup environment: install dependencies, generate config etc."
 
 
 # ─── Environment Management ────────────────────────────────────────────────────
   dev:
-    desc: "🏗️ Provision and start local development environment"
-    cmds:
-      - pnpm run build
-      - pnpm run start
+    desc: "Provision and start local development environment"
 
   prod:
-    desc: "🚀 Provision and deploy to production"
-
+    desc: "Provision and deploy to production"
 
 
 # ─── Misc ────────────────────────────────────────────────────
   info:
-    desc: "🌐 URLs to visit"
+    desc: "URLs to visit"
     cmds:
       - echo "Prometheus -> {{.PROM_URL}}"
       - echo "Grafana -> {{.GRAF_URL}}"
@@ -102,7 +95,26 @@ tasks:
   versions:
     desc: "List current deployed versions"
     cmds:
-      - mike list
+      - uv run mike list
+
+
+# ─── System Management ─────────────────────────────────────────────────────────
+  ports:
+    desc: "List ports in use"
+    cmds:
+      - ss -tunl
+
+
+# ─── Documentation ─────────────────────────────────────────────────────────────
+  docs:
+    desc: "Serve docs locally"
+    cmds:
+      - uv run mkdocs serve --clean -a {{.MKDOCS_PORT}}
+
+  docs-docker:
+    desc: "Serve docs locally with docker"
+    cmds:
+      - docker compose -f {{.DOCS_COMPOSE_FILE}} up
 
 
 
@@ -113,29 +125,19 @@ tasks:
       - find . -type f -name "*Zone.Identifier*" -delete
 
   cleanup-dev:
-    desc: "🔁 Cleanup development resources only"
+    desc: "Cleanup development resources only"
+    cmds:
+      - docker compose -f {{.DOCS_COMPOSE_FILE}} down
 
   cleanup-prod:
-    desc: "🔐 Cleanup production resources only"
+    desc: "Cleanup production resources only"
 
   cleanup-all:
-    desc: "🧼 Cleanup dev and prod in one swoop"
-
-
-
-# ─── System Management ─────────────────────────────────────────────────────────
-  ports:
-    desc: "📋 List ports in use"
+    desc: "Cleanup dev and prod in one swoop"
     cmds:
-      - ss -tunl
-
-
-
-# ─── Documentation ─────────────────────────────────────────────────────────────
-  docs:
-    desc: "🌐 Serve docs locally -> http://127.0.0.1:8000/docs/"
-    cmds:
-      - poetry run mkdocs serve --clean
+      - task: cleanup-dev
+      - task: cleanup-prod
+      - task: cleanup-zone
 
 
 
@@ -194,5 +196,3 @@ tasks:
       - "{{.gif}}"
     generates:
       - "assets/demo-video-small.gif"
-
-
