--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,7 @@ nav:
   - Architecture:
       - System Overview: 1-architecture/0-overview.md
   - MyProject: # This becomes the main docs for whatever you are building
+      - uv Package Manager: 2-project/uv-notes.md
       - Project Topic 1: 2-project/0-topic1.md
       - Project Topic 2: 2-project/1-topic2.md
       - Project Topic 3: 2-project/2-topic3.md
