--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -120,7 +120,7 @@ tasks:
   docs-docker:
     desc: "Serve docs locally with docker"
     cmds:
-      - docker compose -f {{.DOCS_COMPOSE_FILE}} up
+      - docker compose -f {{.DOCS_COMPOSE_FILE}} up -d
 
 
 
@@ -203,4 +203,5 @@ tasks:
     generates:
 
       - "assets/demo-video-small.gif"
+
 
